force-app/main/default/objects/Vehicle__c/fields/bike_Company__c.field-meta.xml
<CustomField>
    <fullName>bike_Company__c</fullName>
    <label>bike_Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAJAJ</fullName>
            </value>
            <value>
                <fullName>TVS</fullName>
            </value>
            <value>
                <fullName>HERO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>