force-app/main/default/objects/Vehicle__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>CC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>