force-app/main/default/objects/Vehicle__c/fields/HP__c.field-meta.xml
<CustomField>
    <fullName>HP__c</fullName>
    <formula>CC__c /15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>