force-app/main/default/objects/Vehicle__c/fields/Licenceid__c.field-meta.xml
<CustomField>
    <fullName>Licenceid__c</fullName>
    <label>Licenceid</label>
    <type>AutoNumber</type>
</CustomField>