force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>bike_Company__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVA</fullName>
            </value>
            <value>
                <fullName>APACHE</fullName>
            </value>
            <value>
                <fullName>DISCOVER</fullName>
            </value>
            <value>
                <fullName>GLAMOUR</fullName>
            </value>
            <value>
                <fullName>PULSUR200</fullName>
            </value>
            <value>
                <fullName>SPLENDER</fullName>
            </value>
            <value>
                <fullName>STARZCITY</fullName>
            </value>
            <value>
                <fullName>VICTOR</fullName>
            </value>
            <value>
                <fullName>WIND125</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>