force-app/main/default/objects/Vehicle__c/recordTypes/Bike_r.recordType-meta.xml
<RecordType>
    <fullName>Bike_r</fullName>
    <active>true</active>
    <label>Bike_r</label>
</RecordType>