force-app/main/default/objects/Vehicle__c/recordTypes/Car_r.recordType-meta.xml
<RecordType>
    <fullName>Car_r</fullName>
    <active>true</active>
    <label>Car_r</label>
</RecordType>