force-app/main/default/objects/Vehicle__c/recordTypes/truck_r.recordType-meta.xml
<RecordType>
    <fullName>truck_r</fullName>
    <active>true</active>
    <label>truck_r</label>
</RecordType>