force-app/main/default/objects/Vehicle__c/validationRules/Price_v.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_v</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &gt;=500000</errorConditionFormula>
    <errorMessage>input price less then 5lacks</errorMessage>
</ValidationRule>